# python-project-lvl1

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: lintering.yaml  make_lint.yaml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: __init__.py  calc.py  even.py  game_calc.py  game_engine.py  game_even.py  game_gcd.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
